переделал под уточненное задание

--- a/lesson2/task1.html
+++ b/lesson2/task1.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <div class="blackBlock">
-        <div class="redBlock redBlockPosition1"></div>
-        <div class="blueBlock blueBlockPosition1"></div>
+        <div class="redBlock "></div>
+        <div class="blueBlock "></div>
     </div>
     <div class="blackBlock">
-        <div class="redBlock redBlockPosition2"></div>
-        <div class="blueBlock blueBlockPosition2"></div>
+        <div class="redBlock "></div>
+        <div class="blueBlock "></div>
     </div>
 
 
