Домашка + рефакторинг стилей

--- a/lesson4/fe-4.html
+++ b/lesson4/fe-4.html
@@ -23,7 +23,7 @@
            <td></td>
            <td></td>
            <td></td>
-           <td>5</td>
+           <td></td>
            <td></td>
            <td></td>
            <td></td>
@@ -33,9 +33,9 @@
            <td>2</td>
            <td></td>
            <td></td>
+           <td><span>♘</span></td>
            <td></td>
-           <td></td>
-           <td></td>
+           <td><span>♘</span></td>
            <td></td>
            <td></td>
            <td></td>
@@ -43,11 +43,11 @@
        <tr>
            <td>3</td>
            <td></td>
+           <td><span>♘</span></td>
            <td></td>
            <td></td>
            <td></td>
-           <td></td>
-           <td></td>
+           <td><span>♘</span></td>
            <td></td>
            <td></td>
        </tr>
@@ -56,8 +56,8 @@
            <td></td>
            <td></td>
            <td></td>
-           <td><h2>♘</h2></td>
-           <td><h2>♘</h2></td>
+           <td><span>♘</span></td>
+           <td></td>
            <td></td>
            <td></td>
            <td></td>
@@ -65,11 +65,11 @@
        <tr>
            <td>5</td>
            <td></td>
+           <td><span>♘</span></td>
            <td></td>
            <td></td>
            <td></td>
-           <td></td>
-           <td></td>
+           <td><span>♘</span></td>
            <td></td>
            <td></td>
        </tr>
@@ -77,9 +77,9 @@
            <td>6</td>
            <td></td>
            <td></td>
+           <td><span>♘</span></td>
            <td></td>
-           <td></td>
-           <td></td>
+           <td><span>♘</span></td>
            <td></td>
            <td></td>
            <td></td>
