--- a/lesson9/m.html
+++ b/lesson9/m.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header><a href=""></a></header>
-    <nav>
+    <header>
+        <a href="" class="headerLogo"></a>
+        <nav>
        <ul>
         <li><a href="">ПОРТФОЛИО</a></li>
         <li><a href="">TWITTER</a></li>
@@ -16,6 +18,8 @@
         <li><a href="">GOOGLE+</a></li>
         </ul>
     </nav>
+    </header>
+
     <main>
        <h1>Иванов Сергей Васильнвич</h1>
        <div class="about">
@@ -65,7 +69,7 @@
         <p> Есть желание обучаться, развиваться профессионально, стремиться к карьерному росту, хочу повышать уровеньзнаний в данной области, обучаться новым технологиям и уметь применять знания на практике.</p>
         <h3>Ожидания от работы</h3>
         <p>Возможность профессионального роста, повышения квалификации, приемлемые условия труда.</p>
-        <p class="psevdoH3"> А еще я...</p>
+        <p class="pseudoH3"> А еще я...</p>
         <p>Умею кататься на велосипеде и играть на гитаре. Люблю путешествия и интерестных людей.</p>
     </main>
 
