мелкие изменения в 11 задании

--- a/lesson11/11/Lesson 11.html
+++ b/lesson11/11/Lesson 11.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
-        <section class="news">
+        <section class="doubleColl">
             <h1>Title</h1>
-            <div class="items">
+            <div class="blog items">
                 <article>
                     <img src="http://animal-dream.com/data_images/whale/whale1.jpg" alt="">
                     <h2>Title h2</h2>
