--- a/lesson14/lesson14.html
+++ b/lesson14/lesson14.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,83 +9,94 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Lesson 14</title>
 </head>
+
 <body>
-   <main class="container-fluid">
-    <section class="row">
-        <article class=" col-xs-12 col-sm-6">
-            <h2 class="">Fashion</h2>
-            <img class="" src="img/1-1.png" alt="">
-            <h3 class="">At vero eos et accusamus et iusto </h3>
-            <p class="">
-                Odio dignissimos ducimus qui blanditiis praesentium voluptatum.
-           </p>
-            <a class=" bottom" href="">Read More</a>
-        </article>
-
-        <article class=" col-xs-12 col-sm-6">
-            <h2 class="">Nature</h2>
-            <img class="" src="img/1-2.png" alt="">
-            <h3 class="">Deleniti atque corrupti quos</h3>
-            <p class="">
-                Dolores et quas molestias excepturi sint occaecati cupiditate non provident.
-            </p>
-            <a class="bottom" href="">Read More</a>
-        </article>
-<!--
-        <article class="row col-sm-6">
-            <h2 class="col-xs-12">Love story</h2>
-            <img class="col-xs-12" src="img/1-3.png" alt="">
-            <h3 class="col-xs-12">Similique sunt in culpa qui officia </h3>
-            <p class="col-xs-12">
-                Deserunt mollitia animi, id est laborum et dolorum fuga.
-            </p>
-            <a class="col-xs-12" href="">Read More</a>
-        </article>
-        <article class="row col-sm-6">
-            <h2 class="col-xs-12">Fine art</h2>
-            <img class="col-xs-12" src="img/1-4.png" alt="">
-            <h3 class="col-xs-12">Similique sunt in culpa qui officia </h3>
-            <p class="col-xs-12">
-                Deserunt mollitia animi, id est laborum et dolorum fuga.
-            </p>
-            <a class="col-xs-12" href="">Read More</a>
-        </article>
--->
-
-    </section>
-
-<!--
-        <section>
-            <h2>Shortly about me</h2>
-            <img src="img/2-1.png" alt="">
-            <p>Sed ut perspictis unde omnis natus error volupatem accusantium doloue laudantium, totam rem.</p>
-            <p>Aperiam, eaque ipsa quae ab illo  veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed</p>
-            <li><a href=""></a>Campaigns</li>
-            <li><a href=""></a>Portraits</li>
-            <li><a href=""></a>Fashion</li>
-            <li><a href=""></a>Fine Art</li>
-            <li><a href=""></a>Advertising</li>
-            <li><a href=""></a>Lifestyle</li>
-            <li><a href=""></a>Love story</li>
-            <li><a href=""></a>Landscapes</li>
+    <main class="container">
+        <section class="row firstSection">
+            <article class="col-sm-6 col-md-3">
+                <h2 class="">Fashion</h2>
+                <img class="" src="img/1-1.png" alt="">
+                <h3 class="">At vero eos et accusamus et iusto </h3>
+                <p class=""> Odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p> <a class=" bottom" href="">Read More</a> </article>
+            <article class="col-sm-6 col-md-3">
+                <h2 class="">Fashion</h2>
+                <img class="" src="img/1-2.png" alt="">
+                <h3 class="">At vero eos et accusamus et iusto </h3>
+                <p class=""> Odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p> <a class=" bottom" href="">Read More</a> </article>
+            <article class="col-sm-6 col-md-3">
+                <h2 class="">Fashion</h2>
+                <img class="" src="img/1-3.png" alt="">
+                <h3 class="">At vero eos et accusamus et iusto </h3>
+                <p class=""> Odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p> <a class=" bottom" href="">Read More</a> </article>
+            <article class="col-sm-6 col-md-3">
+                <h2 class="">Fashion</h2>
+                <img class="" src="img/1-4.png" alt="">
+                <h3 class="">At vero eos et accusamus et iusto </h3>
+                <p class=""> Odio dignissimos ducimus qui blanditiis praesentium voluptatum. </p> <a class=" bottom" href="">Read More</a> </article>
+            <div class="col-sm-12 verticalOffset"></div>
         </section>
-        <section>
-            <h2>Latest photoshoots</h2>
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-            <img src="img/3-1.png" alt="">
-        </section>
--->
 
+        <div class="row secondSection">
+            <section class="col-md-6">
+              <div class="row">
+               <article>
+                <h2 class="col-sm-12">Shortly about me</h2>
+
+                <img  class="col-sm-6" src="img/2-1.png" alt="">
+
+                <div class="col-sm-6">
+                <p>Sed ut perspictis unde omnis natus error volupatem accusantium doloue laudantium, totam rem.</p>
+                <p>Aperiam, eaque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed</p>
+
+                <div class="row">
+                <ul>
+                   <div class="col-sm-6">
+                    <li>
+                        <a href="#">Campaigns</a></li>
+                    <li>
+                        <a href="#">Portraits</a></li>
+                    <li>
+                        <a href="#">Fashion</a></li>
+                    <li>
+                        <a href="#">Fine Art</a></li>
+                    </div>
+                    <div class="col-sm-6">
+                    <li>
+                        <a href="#">Advertising</a></li>
+                    <li>
+                        <a href="#">Lifestyle</a></li>
+                    <li>
+                        <a href="#">Love story</a></li>
+                    <li>
+                        <a href="#">Landscapes</a></li>
+                    </div>
+                </ul>
+                </div>
+
+                </div>
+                </article>
+                </div>
+            </section>
+            <section class="col-md-6">
+                <h2 class="col-sm-12">Latest photoshoots</h2>
+
+                <div class="row">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                <img class="col-xs-6 col-sm-4 col-md-3" src="img/3-1.png" alt="">
+                </div>
+            </section>
+        </div>
     </main>
 </body>
+
 </html>
