--- a/lesson15/lesson15.html
+++ b/lesson15/lesson15.html
@@ -7,22 +7,62 @@
     <title>Document</title>
 </head>
 <body>
-  <header class="header">
-     <a href="#" class="logo">Logo</a>
-      <nav class="nav">
-       <span class="humb">button</span>
-       <ul>
-           <li><a href="#"></a>itm 1</li>
-           <li><a href="#"></a>itm 2</li>
-           <li><a href="#"></a>itm 3</li>
-       </ul>
-   </nav>
-  </header>
+   <main class="container">
+       <section class="doubleColl blog row">
+                    <h2 class="col-md-3">FROM THE BLOG</h2>
+                    <div class="col-md-9">
+                       <div class="row">
+                        <article class="col-sm-4">
+                            <img src="img/300x200_ggb_fort_point.jpg" alt="">
+                            <h2>Blog post titles in here</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed nulla eget turpis viverra ornare.</p>
+                        </article>
+                        <article class="col-sm-4">
+                            <img src="img/300x200_ggb_fort_point.jpg" alt="">
+                            <h2>Blog post titles in here</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed nulla eget turpis viverra ornare.</p>
+                        </article>
+                        <article class="col-sm-4">
+                            <img src="img/300x200_ggb_fort_point.jpg" alt="">
+                            <h2>Blog post titles in here</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed nulla eget turpis viverra ornare.</p>
+                        </article>
+                        </div>
+                    </div>
+       </section>
 
+       <section class="doubleColl progects row">
+                    <h2 class="col-md-3">RECENT PROJECTS</h2>
+                    <div class="col-md-9">
+                       <div class="row">
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        <article class="col-sm-3">
+                            <img src="img/layer-18.png" alt="">
+                        </article>
+                        </div>
+                    </div>
+       </section>
+   </main>
 
-
-    <script src="js/jquery/jquery-3.1.1.min.js"></script>
-    <script src="js/jquery/bootstrap/bootstrap.min.js"></script>
-    <script src="js/user.js"></script>
 </body>
 </html>
