--- a/lesson16/lesson16.html
+++ b/lesson16/lesson16.html
@@ -43,6 +43,7 @@
         </main>
     </div>
     <script src="js/jquery/jquery-3.1.1.min.js"></script>
+    <script src="js/user.js"></script>
     <script src="js/slick/slick.min.js"></script>
     <script>
         $('.slider').slick({
