--- a/main-test/babyplus.html
+++ b/main-test/babyplus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">1</a>
+        <a href="#" class="logo"></a>
     </header>
 
 </body>
